added helloworld import to test for multiple source files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,7 @@ include(${ITK_USE_FILE})
 # Create the DicomSeries to mha(meta image files)
 add_executable(DicomSeriesReadImageWrite2 DicomSeriesReadImageWrite2.cxx)
 target_link_libraries(DicomSeriesReadImageWrite2  ${ITK_LIBRARIES})
+
+# Create Hello World application to test for proper ITK installation
+add_executable(HelloWorld main.cpp)
+target_link_libraries(HelloWorld ${ITK_LIBRARIES})
