--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,12 @@ find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
 # Create the DicomSeries to mha(meta image files)
-add_executable(DicomSeriesReadImageWrite2 DicomSeriesReadImageWrite2.cxx)
-target_link_libraries(DicomSeriesReadImageWrite2  ${ITK_LIBRARIES})
+add_executable(Main1 main1.cpp DicomSeriesReadImageWrite2.cxx ImageReadImageSeriesWrite.cxx)
+target_link_libraries(Main1 ${ITK_LIBRARIES})
 
 # Create Hello World application to test for proper ITK installation
 add_executable(HelloWorld main.cpp)
 target_link_libraries(HelloWorld ${ITK_LIBRARIES})
-
-# Create BSpline Registration
-add_executable(BSpline-Registration BSpline-Registration.cxx)
-target_link_libraries(BSpline-Registration ${ITK_LIBRARIES})
-
-# Create Demon's Registration Algorithm
-add_executable(Demons-Registration Demons-Registration.cxx)
-target_link_libraries(Demons-Registration ${ITK_LIBRARIES})
 
 # Create WatershedSegmentation 1
 if (ITKVtkGlue_LOADED)
@@ -31,7 +23,9 @@ endif()
 add_executable(WatershedSegmentation1 WatershedSegmentation1.cxx )
 target_link_libraries(WatershedSegmentation1 ${ITK_LIBRARIES})
 
+add_executable(WatershedSegmentation2 WatershedSegmentation2.cxx )
+target_link_libraries(WatershedSegmentation2 ${ITK_LIBRARIES})
+
 if(BUILD_TESTING)
   add_subdirectory(test)
 endif()
-
