removed creation of watershed exe files, joined with main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,21 +7,12 @@ find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
 # Create the DicomSeries to mha(meta image files)
-add_executable(ImageProcessing ImageProcessing.cpp DicomSeriesReadImageWrite2.cxx ImageReadImageSeriesWrite.cxx)
+add_executable(ImageProcessing ImageProcessing.cpp DicomSeriesReadImageWrite2.cxx ImageReadImageSeriesWrite.cxx WatershedSegmentation2.cxx)
 target_link_libraries(ImageProcessing ${ITK_LIBRARIES})
 
 # Create Hello World application to test for proper ITK installation
 add_executable(HelloWorld main.cpp)
 target_link_libraries(HelloWorld ${ITK_LIBRARIES})
-
-# Create WatershedSegmentation 1
-if (ITKVtkGlue_LOADED)
-  find_package(VTK REQUIRED)
-  include(${VTK_USE_FILE})
-endif()
-
-add_executable(WatershedSegmentation2 WatershedSegmentation2.cxx )
-target_link_libraries(WatershedSegmentation2 ${ITK_LIBRARIES})
 
 if(BUILD_TESTING)
   add_subdirectory(test)
