removed Demons Algorithm and HelloWorld Example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,8 @@ find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
 # Create the DicomSeries to mha(meta image files)
-add_executable(ImageProcessing ImageProcessing.cpp DicomSeriesReadImageWrite2.cxx ImageReadImageSeriesWrite.cxx WatershedSegmentation2.cxx BSplineRegistration.cxx DemonsRegistration.cxx)
+add_executable(ImageProcessing ImageProcessing.cpp DicomSeriesReadImageWrite2.cxx ImageReadImageSeriesWrite.cxx WatershedSegmentation2.cxx BSplineRegistration.cxx)
 target_link_libraries(ImageProcessing ${ITK_LIBRARIES})
-
-# Create Hello World application to test for proper ITK installation
-add_executable(HelloWorld main.cpp)
-target_link_libraries(HelloWorld ${ITK_LIBRARIES})
 
 if(BUILD_TESTING)
   add_subdirectory(test)
